feat(2d): use SVG component in Latex and support tweening (#800)
Co-authored-by: aarthificial <aarthificial@gmail.com>

--- a/packages/docs/blog/2023-02-11-version-2.3.0.mdx
+++ b/packages/docs/blog/2023-02-11-version-2.3.0.mdx
@@ -6,7 +6,7 @@ authors: aarthificial
 
 ### Features
 
-- A new [`LaTeX`](/docs/nodes) node!
+- A new [`LaTeX`](/docs/latex) node!
   ([#228](https://github.com/motion-canvas/motion-canvas/issues/228))
   ([4c26d2a](https://github.com/motion-canvas/motion-canvas/commit/4c26d2aaf0c697486639aa917cd5c585d3d0ea74))
 - CodeBlock themes (documentation coming soon)
