docs: better latex link (#1089)

--- a/packages/docs/blog/2024-08-13-version-3.17.0.mdx
+++ b/packages/docs/blog/2024-08-13-version-3.17.0.mdx
@@ -15,7 +15,7 @@ import sourceLatex from '!!raw-loader!@site/blog/2024-08-13-latex';
 <IssueGroup type={'feat'}>
   <Issue user={'levirs565'}>
     The{' '}
-    <Link to="/api/2d/components/Latex">
+    <Link to="/docs/Latex">
       <code>Latex</code>
     </Link>{' '}
     node now supports tweening:
