docs: fix typo in logging.mdx (#1120)
Co-authored-by: aarthificial <aarthificial@gmail.com>

--- a/packages/docs/docs/getting-started/logging.mdx
+++ b/packages/docs/docs/getting-started/logging.mdx
@@ -24,8 +24,8 @@ export default makeScene2D(function* (view) {
 ## Basic
 
 Now that we know how to get a reference to the `Logger` we can take a look at
-different ways to log messages. On way is to use standard logging functions like
-`debug`, `info`, `warn` and `error` and simply log a string:
+different ways to log messages. One way is to use standard logging functions
+like `debug`, `info`, `warn` and `error` and simply log a string:
 
 ```tsx
 logger.debug('Just here to debug some code.');
