docs: update flow.mdx (#1145)
Add import statements for objects used in second example

---------

Co-authored-by: aarthificial <aarthificial@gmail.com>

--- a/packages/docs/docs/getting-started/flow.mdx
+++ b/packages/docs/docs/getting-started/flow.mdx
@@ -62,7 +62,8 @@ For instance, we could extract the flickering code from the above example to a
 separate generator and delegate our scene function to it:
 
 ```tsx
-import {ThreadGenerator} from '@motion-canvas/core';
+import {createRef, ThreadGenerator} from '@motion-canvas/core';
+import {makeScene2D, Circle} from '@motion-canvas/2d';
 
 export default makeScene2D(function* (view) {
   const circle = createRef<Circle>();
