docs: fix small typo in the section on `spring` function (#1124)

--- a/packages/docs/docs/getting-started/tweening.mdx
+++ b/packages/docs/docs/getting-started/tweening.mdx
@@ -206,7 +206,7 @@ between two values using Hooke's law. We need to provide it with the description
 of our spring and the `from` and `to` values. You can think of it as having a
 spring in resting position (the `to` value), stretching it all the way to the
 starting position (the `from` value), and then letting it go. The movement of
-the spring as it tries to reach the equilibrium is what we can use to dive our
+the spring as it tries to reach the equilibrium is what we can use to drive our
 animations.
 
 In the example below, we use springs to animate a position of a circle, but this
